2004-08-13  Ulrich Drepper  <drepper@redhat.com>

	* inet/getnetgrent_r.c (innetgr): We must get the lock used for
	the set/get/end interfaces since we call all these functions in
	succession and must not be interrupted doing this.
	Reported by Chuck Simmons.

	* inet/netgroup.h (struct name_list): Replace name pointer with
	zero-sized array.
	* inet/getnetgrent_r.c: Adjust code for change in name_list
	layout.  Numerous strdup and free calls removed.

	* elf/sprof.c (read_symbols): When comparing aliases, prefer
	non-hidden over hidden symbols and strong over weak symbols
	if both don't start with '_'.

	* malloc/malloc.c: Use strong_alias instead of weak_alias wherever
	possible.

2004-08-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/resource.h: Define non-standard
	RUSAGE_ enums as __RUSAGE_ and adjust macros accordingly.
	* sysdeps/unix/sysv/linux/alpha/bits/resource.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/resource.h: Likewise.
	Define non-standard RLIMIT_ enums as __RLIMIT_ and adjust macros
	accordingly.

2004-08-11  Andreas Schwab  <schwab@suse.de>

	* resolv/res_libc.c: Move definition of __res_initstamp ...
	* resolv/res_init.c: ... here.

2004-08-10  GOTO Masanori  <gotom@debian.or.jp>

	* locale/C-time.c: Change default ERA value from NULL to "".
	* locale/tst-C-locale.c: Add test case for ERA keywords.

2004-08-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/resource.h: Define non-standard
	RLIMIT__ enums as __RLIMIT_ and adjust macros accordingly.
	* sysdeps/unix/sysv/linux/alpha/bits/resource.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h: Likewise.

2004-08-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/resource.h (RLIMIT_SIGPENDING,
	RLIMIT_MSGQUEUE): Add.
	(RLIMIT_NLIMITS, RLIM_NLIMITS): Adjust.
	* sysdeps/unix/sysv/linux/alpha/bits/resource.h (RLIMIT_SIGPENDING,