@@ -1,4 +1,5 @@
-/* Copyright (C) 1996,1997,1999,2000,2002,2003 Free Software Foundation, Inc.
+/* Copyright (C) 1996,1997,1999,2000,2002,2003,2004
+   Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Thorsten Kukuk <kukuk@suse.de>, 1996.
 
@@ -17,11 +18,12 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
    02111-1307 USA.  */
 
-#include <nss.h>
+#include <assert.h>
 #include <ctype.h>
 #include <errno.h>
-#include <bits/libc-lock.h>
+#include <malloc.h>
 #include <netdb.h>
+#include <nss.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -31,36 +33,28 @@
 
 #include "nss-nis.h"
 
-/* Locks the static variables in this file.  */
-__libc_lock_define_initialized (static, lock)
-
-static char *data;
-static size_t data_size;
-static char *cursor;
-
 extern enum nss_status
-_nss_netgroup_parseline (char **cursor, struct __netgrent *result,
+_nss_netgroup_parseline (char **cursor, struct __netgrent *netgrp,
 			 char *buffer, size_t buflen, int *errnop);
 
 
 static void
-internal_nis_endnetgrent (void)
+internal_nis_endnetgrent (struct __netgrent *netgrp)
 {
-  if (data != NULL)
+  if (netgrp->data != NULL)
     {
-      free (data);
-      data = NULL;
-      data_size = 0;
-      cursor = NULL;
+      free (netgrp->data);
+      netgrp->data = NULL;
+      netgrp->data_size = 0;
+      netgrp->cursor = NULL;
     }
 }
 
 enum nss_status
-_nss_nis_setnetgrent (const char *group, struct __netgrent *dummy)
+_nss_nis_setnetgrent (const char *group, struct __netgrent *netgrp)
 {
   char *domain;
-  char *result;
-  int len, group_len;
+  int len;
   enum nss_status status;
 
   status = NSS_STATUS_SUCCESS;
@@ -71,41 +65,32 @@ _nss_nis_setnetgrent (const char *group, struct __netgrent *dummy)
   if (yp_get_default_domain (&domain))
     return NSS_STATUS_UNAVAIL;
 
-  __libc_lock_lock (lock);
+  internal_nis_endnetgrent (netgrp);
 
-  internal_nis_endnetgrent ();
-
-  group_len = strlen (group);
-
-  status = yperr2nss (yp_match (domain, "netgroup", group, group_len,
-				&result, &len));
+  status = yperr2nss (yp_match (domain, "netgroup", group, strlen (group),
+				&netgrp->data, &len));
   if (status == NSS_STATUS_SUCCESS)
     {
-      if (len > 0 && (data = malloc (len + 1)) != NULL)
-	{
-	  data_size = len;
-	  cursor = strncpy (data, result, len + 1);
-	  data[len] = '\0';
-	  free (result);
-	}
-      else
-	status = NSS_STATUS_NOTFOUND;
-    }
+      /* Our implementation of yp_match already allocates a buffer
+	 which is one byte larger than the value in LEN specifies
+	 and the last byte is filled with NUL.  So we can simply
+	 use that buffer.  */
+      assert (len > 0);
+      assert (malloc_usable_size (netgrp->data) >= len + 1);
+      assert (netgrp->data[len] == '\0');
 
-  __libc_lock_unlock (lock);
+      netgrp->data_size = len;
+      netgrp->cursor = netgrp->data;
+    }
 
   return status;
 }
 
 
 enum nss_status
-_nss_nis_endnetgrent (struct __netgrent *dummy)
+_nss_nis_endnetgrent (struct __netgrent *netgrp)
 {
-  __libc_lock_lock (lock);
-
-  internal_nis_endnetgrent ();
-
-  __libc_lock_unlock (lock);
+  internal_nis_endnetgrent (netgrp);
 
   return NSS_STATUS_SUCCESS;
 }
@@ -114,16 +99,9 @@ enum nss_status
 _nss_nis_getnetgrent_r (struct __netgrent *result, char *buffer, size_t buflen,
 			int *errnop)
 {
-  enum nss_status status;
-
-  if (cursor == NULL)
+  if (result->cursor == NULL)
     return NSS_STATUS_NOTFOUND;
 
-  __libc_lock_lock (lock);
-
-  status = _nss_netgroup_parseline (&cursor, result, buffer, buflen, errnop);
-
-  __libc_lock_unlock (lock);
-
-  return status;
+  return _nss_netgroup_parseline (&result->cursor, result, buffer, buflen,
+				  errnop);
 }
