@@ -1,8 +1,15 @@
 2004-08-13  Ulrich Drepper  <drepper@redhat.com>
 
-	* inet/getnetgrent_r.c (innetgr): We must get the lock used for
-	the set/get/end interfaces since we call all these functions in
-	succession and must not be interrupted doing this.
+	* nis/nss_nis/nis-netgrp.c: Remove locking by using data in struct
+	__netgrent object passed in instead of global variables.
+	Optimize.
+	* nis/nss_nisplus/nisplus-netgrp.c: Remove locking by using data
+	in struct __netgrent object passed in instead of global variables.
+	* inet/netgroup.h (struct __netgrent): Add service_user field.
+	Move cursor in anonymous union, add new field location to that
+	union.
+	* inet/getnetgrent_r.c: Extensive rewrite to really enable
+	concurrent uset of set/get/endnetgrent and innetgr.
 	Reported by Chuck Simmons.
 
 	* inet/netgroup.h (struct name_list): Replace name pointer with
